--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,3 +28,26 @@ strong {
 .box {
     background-color: var(--color-background-accent);
 }
+.box.flat-top {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.tabs.is-boxed.is-floating li.is-active {
+    box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+}
+.tabs.is-boxed.is-floating li.is-active > a {
+    border: 0;
+}
+.tabs.is-boxed.is-floating ul {
+    border-bottom-width: 0;
+}
+
+.notification.is-small {
+    padding: 0.5em;
+}
+.notification.is-small pre {
+    background: none;
+    color: #fff;
+    padding: 0;
+}
