Swagger UI setup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,3 +51,9 @@ strong {
     color: #fff;
     padding: 0;
 }
+
+/* Swagger UI */
+
+.swagger-ui .info .title small pre{
+    background-color: transparent;
+}
