Fix table striped

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,3 +61,10 @@ strong {
 #swaggerUiRoot .swagger-ui .wrapper {
     max-width: none;
 }
+
+.table.has-sticky-header thead th {
+    position: sticky;
+    top: 0;
+    z-index: 6;
+    background: #fff;
+}
